2020-02-28 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_get_container_border_width
          * geda_get_widget_style

2020-02-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_label.c: Change first argument to draw_insertion_cursor
      to be a pointer to a GtkWidget and eliminate ancillary widget pointer.
      Utilize macros:

          * geda_get_widget_window
          * geda_get_widget_allocation

2020-02-26 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_get_misc_yalign

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_yalign
          * geda_get_widget_style

2020-02-25 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_misc_xpad
          * geda_get_misc_ypad

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_requisition
          * geda_get_misc_ypad

2020-02-24 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro:

          * geda_get_misc_xalign

    * src/widgets/geda_invisible.c: Replace GTK_WIDGET_SET_FLAGS with
      gtk_widget_set_visible. Utilize macros:

          * geda_set_widget_style

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_misc_xalign

2020-02-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Utilize macros:

          * geda_get_container_border_width
          * geda_get_widget_style

    * src/widgets/geda_invisible.c: Utilize macros:

          * geda_get_widget_style
          * geda_set_widget_window

    * src/widgets/geda_label.c: Utilize macro:

          * geda_get_widget_style

2020-02-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Cast gtk_widget_get_parent return pointer
    * to void for geda_get_widget_parent Gtk >= 3. Add macros:

          * geda_set_widget_state
