@@ -4,6 +4,7 @@
 
           * geda_get_container_border_width
           * geda_get_widget_style
+          * geda_get_widget_window
 
 2020-02-27 Wiley E. Hill <wileyhill@gmail.com>
 
